force-app/main/default/objects/Knowledge__kav/fields/FAQ_Article_Summary__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Article_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Article Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>