force-app/main/default/objects/Knowledge__kav/fields/FAQ_Question__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Question__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>