force-app/main/default/objects/Knowledge__kav/recordTypes/Flash.recordType-meta.xml
<RecordType>
    <fullName>Flash</fullName>
    <active>true</active>
    <label>Flash</label>
</RecordType>