force-app/main/default/objects/Knowledge__kav/recordTypes/Help_Doc.recordType-meta.xml
<RecordType>
    <fullName>Help_Doc</fullName>
    <active>true</active>
    <label>Help_Doc</label>
</RecordType>