force-app/main/default/objects/Knowledge__kav/recordTypes/Process_Document.recordType-meta.xml
<RecordType>
    <fullName>Process_Document</fullName>
    <active>true</active>
    <label>Process_Document</label>
</RecordType>